<?xml version="1.0" encoding="utf-8"?>
<TableRow xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <TextView 
        android:id="@+id/header_model"
        android:text="@string/label_model"
        android:layout_weight="1"
        android:textSize="15dp"
        android:gravity="left"/>
    <TextView 
        android:id="@+id/header_flow"
        android:text="@string/label_flow"
        android:layout_weight="1"
        android:textSize="15dp"
        android:gravity="left"/>
    <TextView 
        android:id="@+id/header_color"
        android:text="@string/label_color"
        android:layout_weight="1"
        android:textSize="15dp"
        android:gravity="left"/>
    <TextView 
        android:id="@+id/header_radius"
        android:text="@string/label_radius"
        android:layout_weight="1"
        android:textSize="15dp"
        android:gravity="left"/>
    <TextView 
        android:id="@+id/header_arc"
        android:text="@string/label_arc"
        android:layout_weight="1"
        android:textSize="15dp"
        android:gravity="left"/>
	<TextView 
        android:id="@+id/header_price"
        android:text="@string/label_price"
        android:layout_weight="1"
        android:textSize="15dp"
        android:gravity="left"/>
</TableRow>