<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="match_parent" 
   android:layout_height="wrap_content" 
   android:layout_weight="1">
   <LinearLayout android:id="@+id/linearLayout"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical" 
      android:padding="5dp">
      <EditText
          android:id="@+id/modelEditText"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/hint_model"
          android:imeOptions="actionNext"
          android:inputType="text" >
	</EditText>

      <EditText
          android:id="@+id/flowEditText"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/hint_flow"
          android:imeOptions="actionNext"
          android:inputType="numberDecimal" >
	</EditText>
	
      <EditText
          android:id="@+id/priceEditText"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/hint_price"
          android:imeOptions="actionNext"
          android:inputType="numberDecimal" >
	</EditText>
	
      <EditText android:id="@+id/colorEditText"
         android:layout_width="match_parent" 
         android:layout_height="wrap_content" 
         android:imeOptions="actionNext" 
         android:hint="@string/hint_color"
         android:inputType="text">
      </EditText>
      
      <EditText android:id="@+id/arcEditText"
         android:layout_width="match_parent" 
         android:layout_height="wrap_content" 
         android:imeOptions="actionNext" 
         android:hint="@string/hint_arc"
         android:inputType="numberDecimal">
      </EditText>
      
      <EditText android:id="@+id/radiusEditText" 
         android:layout_width="match_parent" 
         android:layout_height="wrap_content" 
         android:imeOptions="actionNext" 
         android:hint="@string/hint_radius"
         android:inputType="numberDecimal">
      </EditText>
      
      <Button
          android:id="@+id/saveSprinkler"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="15dp"
          android:text="@string/button_save" >

      </Button>
      
      <Button android:id="@+id/deleteSprinkler" 
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
         android:text="@string/button_delete">
      </Button>
      
   </LinearLayout>
</ScrollView>