<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
   
   android:layout_width="match_parent" android:minWidth="300dp"
   android:layout_height="match_parent" android:orientation="vertical">

   <TableLayout android:id="@+id/tableLayout"
      android:layout_width="match_parent" 
      android:layout_height="wrap_content" android:layout_margin="10dp"
      android:stretchColumns="1">
      <TableRow android:orientation="horizontal"
         android:layout_width="match_parent" 
         android:layout_height="wrap_content">
         <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Lengths" android:gravity="right"
            android:layout_gravity="center_vertical"/>
         <Spinner
       		 android:id="@+id/lengthSpinner"
       		 android:entries="@array/lenth_unit"
       		 android:prompt="@string/length_prompt"
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content" android:max="255" 
            android:paddingLeft="10dp" android:paddingRight="10dp"/>
      </TableRow>
      <TableRow android:orientation="horizontal"
         android:layout_width="match_parent" 
         android:layout_height="wrap_content">
         <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:text="Velocity" android:gravity="right"
            android:layout_gravity="center_vertical"/>
         <Spinner
       		 android:id="@+id/velocitySpinner"
       		 android:entries="@array/velocity_unit"
       		 android:prompt="@string/velocity_prompt"
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content" android:max="255" 
            android:paddingLeft="10dp" android:paddingRight="10dp"/>
      </TableRow>
      <TableRow android:orientation="horizontal"
         android:layout_width="match_parent" 
         android:layout_height="wrap_content">
         <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:text="Pressure" android:gravity="right"
            android:layout_gravity="center_vertical"/>
         <Spinner
       		 android:id="@+id/pressureSpinner"
       		 android:entries="@array/pressure_unit"
       		 android:prompt="@string/pressure_prompt"
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content" android:max="255" 
            android:paddingLeft="10dp" android:paddingRight="10dp"/>
      </TableRow>
      
   </TableLayout>

   
   <Button android:id="@+id/setUnits"
      android:layout_width="wrap_content" 
      android:layout_height="wrap_content"  
      android:layout_gravity="center_horizontal"
      android:text="Set Unit"/>
</LinearLayout>

<!-- View for unit dialog layout
 -->
